...
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/design"
    tools:context="com.almortah.almortah.Search">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
...
                    android:text="@string/location"
                    android:textSize="15sp"
                    android:textColor="@color/colorGreen"
                    android:textStyle="bold|italic" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
...
                <Button
                    android:id="@+id/addAddMin"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/colorGreen"
                    android:textColor="@color/colorWhite"
                    android:text="+ +"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/colorGreen"
                    android:textColor="@color/colorWhite"
                    android:text="+"/>
                <Button
                    android:id="@+id/addAddMax"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/colorGreen"
                    android:textColor="@color/colorWhite"
                    android:text="+ +"/>
            </LinearLayout>
...
                android:textColor="@color/colorWhite"
                android:text="@string/findSpecifcChalet"/>

        </LinearLayout>
        </ScrollView>
        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            />
    </android.support.v4.widget.DrawerLayout>
...
